--- a/GameData/Interkosmos/Parts/Box_Sensor_Photometer.cfg
+++ b/GameData/Interkosmos/Parts/Box_Sensor_Photometer.cfg
@@ -14,7 +14,7 @@
 	
 	node_attach = 0.0, 0.0, 0.096, 0.0, 0.0, -1.0
 	
-	TechRequired = basicScience
+	TechRequired = engineering101
 	entryCost = 2200
 	cost = 880
 	category = Science
