--- a/GameData/Knes/Parts/Box_Sensor_GasAnalyzer.cfg
+++ b/GameData/Knes/Parts/Box_Sensor_GasAnalyzer.cfg
@@ -6,7 +6,7 @@
 	
 	MODEL
 	{
-		model = Interkosmos/Assets/Box_Sensor_GasAnalyzer
+		model = Knes/Assets/Box_Sensor_GasAnalyzer
 	}
 	
 	scale = 1
@@ -20,7 +20,7 @@
 	category = Science
 	subcategory = 0
 	title = GasAnalyzer
-	manufacturer = Interkosmos
+	manufacturer = Knes
 	description = This experiment device contained five manometer analysis cells, a moisture gauge and control electronics in a 10 cm diameter cylindrical package. Include two manometers and three miscellaneous experiments designed to detect trace amounts of gases
 	attachRules = 0,1,0,0,1
 	mass = 0.005
@@ -32,7 +32,7 @@
 	maxTemp = 1200 // = 3200
 	PhysicsSignificance = 1
 	bulkheadProfiles = srf
-	tags = Gas Interkosmos atmospher experiment pressure research rerun re-run reus re-us redo re-do reset re-set science sensor
+	tags = Gas Knes atmospher experiment pressure research rerun re-run reus re-us redo re-do reset re-set science sensor
 	
 	MODULE
 	{
