--- a/GameData/Knes/Parts/Box_Sensor_Hydrometer.cfg
+++ b/GameData/Knes/Parts/Box_Sensor_Hydrometer.cfg
@@ -6,7 +6,7 @@
 	
 	MODEL
 	{
-		model = Interkosmos/Assets/Box_Sensor_Hydrometer
+		model = Knes/Assets/Box_Sensor_Hydrometer
 	}
 	
 	scale = 1
@@ -20,7 +20,7 @@
 	category = Science
 	subcategory = 0
 	title = Hydrometer
-	manufacturer = Interkosmos
+	manufacturer = Knes
 	description = Experiment device to measure water vapor by two methods. Both were held inside insulated domes, temperature stabilized with a heat-absorbing phase-change material (lithium nitrate trihydrate). The right dome carried an electroconductivity sensor based on the moisture absorbing salt lithium chloride. 
 	attachRules = 0,1,0,0,1
 	mass = 0.005
