--- a/GameData/Knes/Parts/Box_Sensor_IRSpectrometer.cfg
+++ b/GameData/Knes/Parts/Box_Sensor_IRSpectrometer.cfg
@@ -6,7 +6,7 @@
 	
 	MODEL
 	{
-		model = Interkosmos/Assets/Box_Sensor_IRSpectrometer
+		model = Knes/Assets/Box_Sensor_IRSpectrometer
 	}
 	
 	scale = 1
@@ -20,7 +20,7 @@
 	category = Science
 	subcategory = 0
 	title = IR Spectrometer
-	manufacturer = Interkosmos
+	manufacturer = Knes
 	description = Spectrometer to measure the thermal radiation of the atmosphere and surface, measuring the ranges from 7 to 20 μm and 14 to 38 μm, each at 150 positions.
 	attachRules = 0,1,0,0,1
 	mass = 0.005
@@ -32,7 +32,7 @@
 	maxTemp = 1200 // = 3200
 	PhysicsSignificance = 1
 	bulkheadProfiles = srf
-	tags = Gas Interkosmos atmospher experiment pressure research rerun re-run reus re-us redo re-do reset re-set science sensor
+	tags = Gas Knes atmospher experiment pressure research rerun re-run reus re-us redo re-do reset re-set science sensor
 	
 	MODULE
 	{
