--- a/GameData/Knes/Parts/Box_Sensor_Photometer.cfg
+++ b/GameData/Knes/Parts/Box_Sensor_Photometer.cfg
@@ -6,7 +6,7 @@
 	
 	MODEL
 	{
-		model = Interkosmos/Assets/Box_Sensor_Photometer
+		model = Knes/Assets/Box_Sensor_Photometer
 	}
 	
 	scale = 1
@@ -20,7 +20,7 @@
 	category = Science
 	subcategory = 0
 	title = Photometer
-	manufacturer = Interkosmos
+	manufacturer = Knes
 	description = This photometer use three fiber-optic pipes to view upward (narrow and wide angles) and downward. A wheel of five glass filters provided color and radiance measurements at wavelengths between 440 and 1160 nm (green, yellow, red, IR1, IR2).
 	attachRules = 0,1,0,0,1
 	mass = 0.005
@@ -32,7 +32,7 @@
 	maxTemp = 1200 // = 3200
 	PhysicsSignificance = 1
 	bulkheadProfiles = srf
-	tags = Gas Interkosmos atmospher experiment pressure research rerun re-run reus re-us redo re-do reset re-set science sensor
+	tags = Gas Knes atmospher experiment pressure research rerun re-run reus re-us redo re-do reset re-set science sensor
 	
     MODULE
     {
