--- a/GameData/Knes/Parts/Crystallisation_Facility.cfg
+++ b/GameData/Knes/Parts/Crystallisation_Facility.cfg
@@ -6,7 +6,7 @@
 	
 	MODEL
 	{
-		model = Interkosmos/Assets/Crystallisation_Facility
+		model = Knes/Assets/Crystallisation_Facility
 	}
 	
 	scale = 1
@@ -20,7 +20,7 @@
 	category = Utility
 	subcategory = 0
 	title = Crystallisation Facility
-	manufacturer = Interkosmos
+	manufacturer = Knes
 	description = The Crystallisation Facility is a multi-user instrument for the fundamental study of the processes of nucleation and crystallisation of biological macro-molecules, and specifically, how these processes are influenced by gravity. This Instrument produces 50 protein crystal in ~23 days.
 	attachRules = 0,1,0,0,1
 	mass = 0.005
@@ -32,7 +32,7 @@
 	maxTemp = 1200 // = 3200
 	PhysicsSignificance = 1
 	bulkheadProfiles = srf
-	tags = Interkosmos crystal research science facility protein
+	tags = Knes crystal research science facility protein
 
 	MODULE
 	{
