--- a/GameData/Knes/Parts/Vesta/Vesta_Parachute_03125.cfg
+++ b/GameData/Knes/Parts/Vesta/Vesta_Parachute_03125.cfg
@@ -38,10 +38,12 @@ PART
 	description = 
 	tags = Vesta Knes
 	
-	mass = 0.1
+	mass = 0.025
 	
 	bodyLiftMultiplier = 0	
 	dragModelType = default
+	maximum_drag = 0.6
+	minimum_drag = 0.3		
 	angularDrag = 3
 	crashTolerance = 12
 	maxTemp = 2500 // = 3100
@@ -59,25 +61,25 @@ PART
 		capName = cap
 		canopyName = canopy
 		stowedDrag = 0.25
-		semiDeployedDrag = 1
-		fullyDeployedDrag = 500
-		minAirPressureToOpen = 0.04
-		clampMinAirPressure = 0.04
-		deployAltitude = 1000
-		deploymentSpeed = 0.125
+		semiDeployedDrag = 2
+		fullyDeployedDrag = 300
+		minAirPressureToOpen = 0.02
+		clampMinAirPressure = 0.02
+		deployAltitude = 1500
+		deploymentSpeed = 0.180
 		semiDeploymentSpeed = 0.5
-		chuteMaxTemp = 650
+		chuteMaxTemp = 850
 	}
 	MODULE
 	{
 		name = ModuleDragModifier
 		dragCubeName = SEMIDEPLOYED
-		dragModifier = 1.25
+		dragModifier = 1.5
 	}
 	MODULE
 	{
 		name = ModuleDragModifier
 		dragCubeName = DEPLOYED
-		dragModifier = 12
+		dragModifier = 8
 	}	
 }
