--- a/GameData/Knes/Parts/Vesta/Vesta_AirBrake.cfg
+++ b/GameData/Knes/Parts/Vesta/Vesta_AirBrake.cfg
@@ -44,9 +44,9 @@ PART
 	MODULE
 	{
 		name = ModuleAeroSurface
-		useInternalDragModel = False
+		useInternalDragModel = True
 		dragCoeff = 0.5
-		deflectionLiftCoeff = 0.15
+		deflectionLiftCoeff = 0.10
 		ctrlSurfaceRange = 60
 		ctrlRangeFactor = 0.2
 		ctrlSurfaceArea = 1
