--- a/GameData/Knes/Parts/Launcher/Vesta/Vesta_Avionic_03125.cfg
+++ b/GameData/Knes/Parts/Launcher/Vesta/Vesta_Avionic_03125.cfg
@@ -28,7 +28,7 @@ PART
 	subcategory  = 0
 	title        = Probe Nose Cone
 	manufacturer = Knes
-	description  = 
+	description  = Include a 2HOT Thermometer and a Barometer
 	tags = Vesta Knes
 
 	mass = 0.06
@@ -48,10 +48,23 @@ PART
 		RESOURCE
 		{
 			name = ElectricCharge
-			rate = 0.04
+			rate = 0.01
 		}
 		hasHibernation = True
 	}
+	
+	MODULE
+	{
+		name = ModuleReactionWheel
+		PitchTorque = 0.1
+		YawTorque = 0.1
+		RollTorque = 0.1
+		RESOURCE
+		{
+			name = ElectricCharge
+			rate = 0.002
+		}
+	}	
 	
 	MODULE
 	{
@@ -59,7 +72,7 @@ PART
 		antennaType = DIRECT
 		packetInterval = 0.6
 		packetSize = 2
-		packetResourceCost = 12.0
+		packetResourceCost = 8.0
 		requiredResource = ElectricCharge
 		antennaPower = 500000
 		antennaCombinable = False
@@ -84,6 +97,52 @@ PART
 		showStatus = True
 	}
 
+	MODULE
+	{
+		name = ModuleEnviroSensor
+		sensorType = TEMP
+	}
+	MODULE
+	{
+		name = ModuleScienceExperiment
+		experimentID = temperatureScan
+		experimentActionName = #autoLOC_502067 //#autoLOC_502067 = Log Temperature
+		resetActionName = #autoLOC_502064 //#autoLOC_502064 = Delete Data
+		useStaging = False
+		useActionGroups = True
+		hideUIwhenUnavailable = False
+		xmitDataScalar = 0.5
+		dataIsCollectable = True
+		collectActionName = #autoLOC_238018 //#autoLOC_238018 = Take Data
+		interactionRange = 1.5
+		rerunnable = True
+		usageReqMaskInternal = 1
+		usageReqMaskExternal = 8
+	}
+	
+	MODULE
+	{
+		name = ModuleEnviroSensor
+		sensorType = PRES
+	}
+	MODULE
+	{
+		name = ModuleScienceExperiment
+		experimentID = barometerScan
+		experimentActionName = #autoLOC_502065 //#autoLOC_502065 = Log Pressure Data
+		resetActionName = #autoLOC_502064 //#autoLOC_502064 = Delete Data
+		useStaging = False
+		useActionGroups = True
+		hideUIwhenUnavailable = False
+		xmitDataScalar = 0.5
+		dataIsCollectable = True
+		collectActionName = #autoLOC_238018 //#autoLOC_238018 = Take Data
+		interactionRange = 1.5
+		rerunnable = True
+		usageReqMaskInternal = 1
+		usageReqMaskExternal = 8
+	}	
+	
 	RESOURCE
 	{
 		name = ElectricCharge
