--- a/GameData/Knes/Resources/ScienceDefs.cfg
+++ b/GameData/Knes/Resources/ScienceDefs.cfg
@@ -286,51 +286,69 @@ EXPERIMENT_DEFINITION
 	}
 }
 
-
-
-//Test science part
-
 EXPERIMENT_DEFINITION
-{
-	id = ScienceBox
-	title = ScienceBox
-	baseValue = 12
-	scienceCap = 12
-	dataScale = 1
+{	
+	id = CosmoCat
+	title = CosmoCat
+	baseValue = 20
+	scienceCap = 22
+	dataScale = 3
 	
-	requireAtmosphere = True
-	situationMask = 63
-	biomeMask = 3
-
+	requireAtmosphere = False
+	situationMask = 51
+	biomeMask = 51
+	
 	RESULTS
 	{
 		default = 
-		
-		KerbinSrfSplashed = 
-		KerbinSrfLandedLaunchpad = 
-		KerbinSrfLandedRunway = 
-		KerbinSrfLandedKSC = 
-		KerbinFlyingLowGrasslands = 
-		KerbinFlyingLowGrasslands = 
-		KerbinFlyingLowHighlands = 
-		KerbinFlyingLowMountains = 
-		KerbinFlyingLowDeserts = 
-		KerbinFlyingLowBadlands = 
-		KerbinFlyingLowTundra = 
-		KerbinFlyingLowIceCaps = 
-		KerbinFlyingLowShores = 
-		KerbinFlyingLowWater = 
-		KerbinFlying = 
-		 
+
+		MohoInSpace = 
+		MohoSrfLanded = 
+
+		EveInSpace = 
 		EveSrfLanded = 
-		DunaSrfLanded =  
+
+		GillyInSpace = 
+		GillySrfLanded = 
+
+		KerbinInSpace = 
+		KerbinSrfLanded = 
+
+		MunInSpace = 
+		MunSrfLanded = 
+
+		MinmusInSpace = 
+		MinmusSrfLanded = 
+
+		DunaInSpace = 
+		DunaSrfLanded = 
+
+		DresInSpace = 
+		DresSrfLanded = 
+
+		JoolInSpace = 
 		JoolSrfLanded = 
+
+		LaytheInSpace = 
 		LaytheSrfLanded = 
-		VallSrfLanded = 			
-		
+		LaytheSrfSplashed = 
+
+		VallInSpace = 
+		VallSrfLanded = 
+
+		TyloInSpace = 
+		TyloSrfLanded = 
+
+		BopInSpace = 
+		BopSrfLanded = 
+
+		PolInSpace = 
+		PolSrfLanded = 
+
+		EelooInSpace = 
+		EelooSrfLanded = 
 	}
 }
-
 
 
 //-----------------------------------------
