--- a/GameData/Knes/Parts/Launcher/Vesta/Vesta_CatPod_03125.cfg
+++ b/GameData/Knes/Parts/Launcher/Vesta/Vesta_CatPod_03125.cfg
@@ -46,6 +46,18 @@ PART
 	childStageOffset = 1
 	stageOffset = 1
 	fuelCrossFeed = True
+
+	MODULE
+	{
+		name = ModuleCommand
+		minimumCrew = 0
+		RESOURCE
+		{
+			name = ElectricCharge
+			rate = 0.01
+		}
+		hasHibernation = True
+	}
 	
 	MODULE
 	{
@@ -55,4 +67,30 @@ PART
 		evaOnlyStorage = True
 		storageRange = 1.3
 	}
+	
+	MODULE
+	{
+		name = CosmoCat
+		experimentID = CosmoCat
+		experimentActionName = Log Data
+		resetActionName = #autoLOC_502064 //#autoLOC_502064 = Delete Data
+		useStaging = False
+		useActionGroups = True
+		hideUIwhenUnavailable = False
+		xmitDataScalar = 0.5
+		dataIsCollectable = True
+		collectActionName = #autoLOC_238018 //#autoLOC_238018 = Take Data
+		interactionRange = 1.5
+		rerunnable = True
+		usageReqMaskInternal = 1
+		usageReqMaskExternal = 8
+	}	
+	
+	RESOURCE
+	{
+		name = ElectricCharge
+		amount = 10.0
+		maxAmount = 10.0
+	}	
+	
 }
