--- a/GameData/Knes/Parts/Launcher/Vesta/Vesta_Avionic_03125.cfg
+++ b/GameData/Knes/Parts/Launcher/Vesta/Vesta_Avionic_03125.cfg
@@ -17,6 +17,8 @@ PART
 	rescaleFactor = 1
 
 	node_stack_bottom = 0.0,  -0.1635, 0.0, 0.0, -1.0, 0.0, 0
+	
+	buoyancy = 2	
 
 	bulkheadProfiles = size0
 	attachRules = 1,0,1,1,0
@@ -40,6 +42,7 @@ PART
 	crashTolerance = 55
 	maxTemp        = 3000
 	vesselType = Probe
+	PhysicsSignificance = 1	
 
 	MODULE
 	{
