--- a/GameData/Knes/Parts/Launcher/Vesta/Vesta_CatPod_03125.cfg
+++ b/GameData/Knes/Parts/Launcher/Vesta/Vesta_CatPod_03125.cfg
@@ -19,6 +19,8 @@ PART
 	node_stack_top    = 0.0,  0.31250,  0.0, 0.0,  1.0,  0.0, 0
 	node_stack_bottom = 0.0, -0.31250,  0.0, 0.0, -1.0,  0.0, 0
 	node_attach       = 0.0,  0.0, 0.15625, 0.0,  0.0, -1.0
+
+	buoyancy = 2
 	
 	bulkheadProfiles = size0
 	attachRules = 1,1,1,1,0
@@ -28,7 +30,7 @@ PART
 	cost = 400
 	category = Science
 	subcategory = 0
-	title = Cat Pod
+	title = CosmoCat
 	manufacturer = Knes
 	description = Vesta Science Cat pod
 	tags = Vesta Knes
@@ -43,6 +45,7 @@ PART
 	maxTemp = 3200
 	breakingForce = 50
 	breakingTorque = 50
+	PhysicsSignificance = 1	
 	childStageOffset = 1
 	stageOffset = 1
 	fuelCrossFeed = True
@@ -70,16 +73,16 @@ PART
 	
 	MODULE
 	{
-		name = CosmoCat
+		name = ModuleScienceExperiment
 		experimentID = CosmoCat
 		experimentActionName = Log Data
-		resetActionName = #autoLOC_502064 //#autoLOC_502064 = Delete Data
+		resetActionName = Delete Data
 		useStaging = False
 		useActionGroups = True
 		hideUIwhenUnavailable = False
 		xmitDataScalar = 0.5
 		dataIsCollectable = True
-		collectActionName = #autoLOC_238018 //#autoLOC_238018 = Take Data
+		collectActionName = Take Data
 		interactionRange = 1.5
 		rerunnable = True
 		usageReqMaskInternal = 1
