--- a/GameData/Knes/Parts/Launcher/Vesta/Vesta_Parachute_03125.cfg
+++ b/GameData/Knes/Parts/Launcher/Vesta/Vesta_Parachute_03125.cfg
@@ -20,7 +20,7 @@ PART
 	node_stack_bottom = 0.0, -0.15625,  0.0, 0.0, -1.0,  0.0, 0
 	node_attach       = 0.0,  0.0, 0.15625, 0.0,  0.0, -1.0
 	
-	buoyancyUseCubeNamed = PACKED
+	buoyancy = 2
 	
 	bulkheadProfiles = size0
 	attachRules = 1,1,1,1,0
@@ -61,8 +61,8 @@ PART
 		capName = cap
 		canopyName = canopy
 		stowedDrag = 0.25
-		semiDeployedDrag = 1.5
-		fullyDeployedDrag = 200
+		semiDeployedDrag = 1.2
+		fullyDeployedDrag = 150
 		minAirPressureToOpen = 0.02
 		clampMinAirPressure = 0.02
 		deployAltitude = 1000
