--- a/GameData/Knes/Resources/ScienceDefs.cfg
+++ b/GameData/Knes/Resources/ScienceDefs.cfg
@@ -165,11 +165,11 @@ EXPERIMENT_DEFINITION
 	title = Color and radiance measurements
 	baseValue = 20
 	scienceCap = 22
-	dataScale = 3
+	dataScale = 1
 	
 	requireAtmosphere = False
-	situationMask = 51
-	biomeMask = 51
+	situationMask = 63
+	biomeMask = 7
 	
 	RESULTS
 	{
@@ -229,11 +229,11 @@ EXPERIMENT_DEFINITION
 	title = Spectroscopy Scan
 	baseValue = 20
 	scienceCap = 22
-	dataScale = 3
+	dataScale = 1
 	
 	requireAtmosphere = False
-	situationMask = 51
-	biomeMask = 51
+	situationMask = 63
+	biomeMask = 7
 	
 	RESULTS
 	{
@@ -289,18 +289,18 @@ EXPERIMENT_DEFINITION
 EXPERIMENT_DEFINITION
 {	
 	id = CosmoCat
-	title = CosmoCat
+	title = CosmoCat Report
 	baseValue = 20
 	scienceCap = 22
-	dataScale = 3
+	dataScale = 1
 	
 	requireAtmosphere = False
-	situationMask = 51
-	biomeMask = 51
+	situationMask = 63
+	biomeMask = 7
 	
 	RESULTS
 	{
-		default = 
+		default = wip
 
 		MohoInSpace = 
 		MohoSrfLanded = 
