--- a/GameData/Knes/Parts/Launcher/Vesta/Vesta_CatPod_03125.cfg
+++ b/GameData/Knes/Parts/Launcher/Vesta/Vesta_CatPod_03125.cfg
@@ -32,7 +32,7 @@ PART
 	subcategory = 0
 	title = CosmoCat
 	manufacturer = Knes
-	description = Vesta Science Cat pod
+	description = It's called a feline transportation unit.
 	tags = Vesta Knes
 	
 	mass = 0.05
