--- a/GameData/Knes/Resources/ScienceDefs.cfg
+++ b/GameData/Knes/Resources/ScienceDefs.cfg
@@ -300,53 +300,53 @@ EXPERIMENT_DEFINITION
 	
 	RESULTS
 	{
-		default = wip
+		default = This cat should not be here.
 
-		MohoInSpace = 
-		MohoSrfLanded = 
+		MohoInSpace = This cat's been eating more than kibble.
+		MohoSrfLanded = This cat has very strange habits...
 
-		EveInSpace = 
-		EveSrfLanded = 
+		EveInSpace = I'm afraid that his health is not good.
+		EveSrfLanded = Who's sitting in the pod?
 
-		GillyInSpace = 
-		GillySrfLanded = 
+		GillyInSpace = He has eyes like yours, all mysterious and full of secrets.
+		GillySrfLanded = I think that cat is too old.
 
-		KerbinInSpace = 
-		KerbinSrfLanded = 
+		KerbinInSpace = Guess someone's really worried about that cat.
+		KerbinSrfLanded = This cat was sick before I even got here.
 
-		MunInSpace = 
-		MunSrfLanded = 
+		MunInSpace = I don't think this cat's scary enough.
+		MunSrfLanded = He won't eat anything else.
 
-		MinmusInSpace = 
-		MinmusSrfLanded = 
+		MinmusInSpace = You put a cat in a pod, he gon' be scratching and hissing
+		MinmusSrfLanded = This cat is like Charles Bronson in The Great Escape.
 
-		DunaInSpace = 
-		DunaSrfLanded = 
+		DunaInSpace = And you better make that cat very happy.
+		DunaSrfLanded = The cat's trying to get out.
 
-		DresInSpace = 
-		DresSrfLanded = 
+		DresInSpace = I hear he has very expressive eyes.
+		DresSrfLanded = How long has the cat been dead?
 
-		JoolInSpace = 
-		JoolSrfLanded = 
+		JoolInSpace = This cat was in Boogie Nights?
+		JoolSrfLanded = I guess he must have scratched you.
 
-		LaytheInSpace = 
-		LaytheSrfLanded = 
-		LaytheSrfSplashed = 
+		LaytheInSpace = This cat, he's not scary.
+		LaytheSrfLanded = I think he's sick.
+		LaytheSrfSplashed = Tried to claw his way out.
 
-		VallInSpace = 
-		VallSrfLanded = 
+		VallInSpace = This cat is a witness... in a murder case.
+		VallSrfLanded = Maybe this cat story will develop into something.
 
-		TyloInSpace = 
-		TyloSrfLanded = 
+		TyloInSpace = I feel so bad about the cat still.
+		TyloSrfLanded = This cat is sick.
 
-		BopInSpace = 
-		BopSrfLanded = 
+		BopInSpace = Be sure that that cat... doesn't hurt anyone else.
+		BopSrfLanded = This cat can tell us if the Kraken has been here.
 
-		PolInSpace = 
-		PolSrfLanded = 
+		PolInSpace = A cat who has taken more than nine lives.
+		PolSrfLanded = This cat reminds me of your grandpa.
 
-		EelooInSpace = 
-		EelooSrfLanded = 
+		EelooInSpace = This cat died a million deaths and was reborn a million times...
+		EelooSrfLanded = I didn't feel anything for this cat.
 	}
 }
 
