--- a/GameData/Knes/Parts/Launcher/Vesta/_Knes_Vesta_Adapter_0625to03125.cfg
+++ b/GameData/Knes/Parts/Launcher/Vesta/_Knes_Vesta_Adapter_0625to03125.cfg
@@ -32,7 +32,7 @@ PART
 	subcategory = 0
 	title = Vesta Adapter 0.625 to 0.3125
 	manufacturer = Knes
-	description = 
+	description = A beautiful Adapter 0.625 to 0.3125 for the Vesta Rocket.
 	tags = Vesta Knes
 
     mass = 0.02
