--- a/GameData/Knes/Parts/Launcher/Vesta/_Knes_Vesta_Aileron.cfg
+++ b/GameData/Knes/Parts/Launcher/Vesta/_Knes_Vesta_Aileron.cfg
@@ -28,7 +28,7 @@ PART
 	subcategory = 0
 	title = Vesta Fin
 	manufacturer = Knes
-	description = 
+	description = Small Fin for the Vesta Rocket
 	tags = Vesta Knes
 	
 	mass = 0.045
