--- a/GameData/Knes/Parts/Launcher/Vesta/_Knes_Vesta_AirBrake.cfg
+++ b/GameData/Knes/Parts/Launcher/Vesta/_Knes_Vesta_AirBrake.cfg
@@ -25,7 +25,7 @@ PART
 	subcategory = 0
 	title = Small Airbrake
 	manufacturer = Knes
-	description = #autoLOC_500113 //#autoLOC_500113 = Research into feasible ways to slow down a plane in mid-air showed that loose hull panels are pretty great as drag-inducing deceleration devices. The discovery led to the invention of the Aerodynamically Integrated Retrograde Braking Robustly Armed Kinetic Extending System (A.I.R.B.R.A.K.E.S.), which is now popular mostly as a cheap alternative to longer runways. C7 Engineers are still trying to come up with a shorter name for such a long acronym.
+	description = Research into feasible ways to slow down a plane in mid-air showed that loose hull panels are pretty great as drag-inducing deceleration devices.
 	attachRules = 0,1,0,0,1
 	mass = 0.01
 	thermalMassModifier = 5.0 // a hair worse than airliner parts
