--- a/GameData/Knes/Parts/Launcher/Vesta/_Knes_Vesta_Avionic_03125.cfg
+++ b/GameData/Knes/Parts/Launcher/Vesta/_Knes_Vesta_Avionic_03125.cfg
@@ -30,7 +30,7 @@ PART
 	subcategory  = 0
 	title        = Probe Nose Cone
 	manufacturer = Knes
-	description  = Include a 2HOT Thermometer and a Barometer
+	description  = A small probe for a small rocket.
 	tags = Vesta Knes
 
 	mass = 0.06
