--- a/GameData/Knes/Parts/Launcher/Vesta/_Knes_Vesta_Parachute_03125.cfg
+++ b/GameData/Knes/Parts/Launcher/Vesta/_Knes_Vesta_Parachute_03125.cfg
@@ -35,7 +35,7 @@ PART
 	subcategory = 0
 	title = Vesta Parachute
 	manufacturer = Knes
-	description = 
+	description = This Parachute has been widely accepted as a generally better alternative to being in freefall.
 	tags = Vesta Knes
 	
 	mass = 0.025
@@ -61,8 +61,8 @@ PART
 		capName = cap
 		canopyName = canopy
 		stowedDrag = 0.25
-		semiDeployedDrag = 1.2
-		fullyDeployedDrag = 150
+		semiDeployedDrag = 1
+		fullyDeployedDrag = 120
 		minAirPressureToOpen = 0.02
 		clampMinAirPressure = 0.02
 		deployAltitude = 1000
