--- a/GameData/Knes/Parts/Launcher/Vesta/_Knes_Vesta_Engine_0625.cfg
+++ b/GameData/Knes/Parts/Launcher/Vesta/_Knes_Vesta_Engine_0625.cfg
@@ -30,7 +30,7 @@ PART
     subcategory  = 0
 	title = Vesta Engine
 	manufacturer = Knes
-	description = 
+	description = This little engine is for the Vesta Rocket. 0.625 size
 	tags = Vesta Knes
 
     mass = 0.25
