--- a/GameData/Knes/Parts/Launcher/Vesta/_Knes_Vesta_FuelTank_0625_3125.cfg
+++ b/GameData/Knes/Parts/Launcher/Vesta/_Knes_Vesta_FuelTank_0625_3125.cfg
@@ -31,7 +31,7 @@ PART
 	subcategory = 0
 	title = Vesta Fuel Tank
 	manufacturer = Knes
-	description = 
+	description = A FuelTank for the Vesta Rocket. size 0.625
 	tags = Vesta Knes
 
 	mass = 0.1
