--- a/GameData/Knes/Parts/Launcher/Vesta/_Knes_Vesta_AirBrake.cfg
+++ b/GameData/Knes/Parts/Launcher/Vesta/_Knes_Vesta_AirBrake.cfg
@@ -39,15 +39,15 @@ PART
 	explosionPotential = 0.1
 	fuelCrossFeed = True
 	bulkheadProfiles = srf
-	tags = (air airbrake aircraft brake dive drag fligh landing plane slow speed spoil Knes Vesta
+	tags = (air airbrake aircraft brake dive drag fligh landing plane slow speed spoil Knes Vesta Veronique
 	
 	MODULE
 	{
 		name = ModuleAeroSurface
 		useInternalDragModel = True
-		dragCoeff = 0.5
+		dragCoeff = 0.4
 		deflectionLiftCoeff = 0.10
-		ctrlSurfaceRange = 60
+		ctrlSurfaceRange = 50
 		ctrlRangeFactor = 0.2
 		ctrlSurfaceArea = 1
 		actuatorSpeed = 20
