--- a/GameData/Knes/Parts/Launcher/Vesta/_Knes_Vesta_Avionic_03125.cfg
+++ b/GameData/Knes/Parts/Launcher/Vesta/_Knes_Vesta_Avionic_03125.cfg
@@ -31,7 +31,7 @@ PART
 	title        = Probe Nose Cone
 	manufacturer = Knes
 	description  = A small probe for a small rocket.
-	tags = Vesta Knes
+	tags = Vesta Veronique Knes
 
 	mass = 0.06
 
