--- a/GameData/Knes/Parts/Launcher/Vesta/_Knes_Vesta_CatPod_03125.cfg
+++ b/GameData/Knes/Parts/Launcher/Vesta/_Knes_Vesta_CatPod_03125.cfg
@@ -33,7 +33,7 @@ PART
 	title = CosmoCat
 	manufacturer = Knes
 	description = It's called a feline transportation unit.
-	tags = Vesta Knes
+	tags = Vesta Veronique Knes
 	
 	mass = 0.05
 	
