--- a/GameData/Knes/Parts/Launcher/Vesta/_Knes_Vesta_Parachute_03125.cfg
+++ b/GameData/Knes/Parts/Launcher/Vesta/_Knes_Vesta_Parachute_03125.cfg
@@ -36,7 +36,7 @@ PART
 	title = Vesta Parachute
 	manufacturer = Knes
 	description = This Parachute has been widely accepted as a generally better alternative to being in freefall.
-	tags = Vesta Knes
+	tags = Vesta Veronique Knes
 	
 	mass = 0.025
 	
@@ -62,7 +62,7 @@ PART
 		canopyName = canopy
 		stowedDrag = 0.25
 		semiDeployedDrag = 1
-		fullyDeployedDrag = 120
+		fullyDeployedDrag = 100
 		minAirPressureToOpen = 0.04
 		clampMinAirPressure = 0.04
 		deployAltitude = 1000
