Tag Fix + New Name

--- a/GameData/Knes/Parts/Core/Fairings/Knes_Aero_Fairing_375.cfg
+++ b/GameData/Knes/Parts/Core/Fairings/Knes_Aero_Fairing_375.cfg
@@ -43,7 +43,8 @@
 	childStageOffset = 1
 	inverseStageCarryover = false
 	bulkheadProfiles = size3
-	tags = knes aero )cap cargo cone contain drag fairing hollow inter nose payload protect rocket shroud stage (stor transport
+	tags = knes aero )cap cargo cone contain drag fairing hollow inter nose payload protect rocket shroud stage (stor transport Ariane
+	
 	MODULE
 	{
 		name = ModuleProceduralFairing
