--- a/GameData/Knes/Parts/Launcher/Ariane5/Knes_Booster_P80.cfg
+++ b/GameData/Knes/Parts/Launcher/Ariane5/Knes_Booster_P80.cfg
@@ -48,7 +48,7 @@
 	maxTemp = 2000 // = 3600
 	stagingIcon = SOLID_BOOSTER
 	bulkheadProfiles = size1, srf
-	tags = knes P80 Ariane moar motor rocket srb
+	tags = knes P80 moar motor rocket srb
 	
 	MODULE
 	{
