--- a/GameData/Knes/Parts/Launcher/Ariane5/Knes_Booster_Pushotron.cfg
+++ b/GameData/Knes/Parts/Launcher/Ariane5/Knes_Booster_Pushotron.cfg
@@ -42,7 +42,7 @@
 	stagingIcon = SOLID_BOOSTER
 	PhysicsSignificance = 1
 	bulkheadProfiles = srf
-	tags = knes abort booster emergency explo malfunc moar (more motor rocket ?rud safe separat solid srb surviv thruster ullage
+	tags = knes abort booster emergency explo malfunc moar (more motor rocket ?rud safe separat solid srb surviv thruster ullage Ariane
 
 	MODULE
 	{
