--- a/GameData/Knes/Parts/Launcher/Ariane5/Knes_Command_Cortex.cfg
+++ b/GameData/Knes/Parts/Launcher/Ariane5/Knes_Command_Cortex.cfg
@@ -36,7 +36,7 @@ PART
 	explosionPotential = 0.5
 	breakingForce = 200
 	breakingTorque = 200
-	tags = 3.75m probe control instrument unit knes
+	tags = 3.75m probe control instrument unit knes Ariane
 
 	vesselType = Probe
 
