--- a/GameData/Knes/Parts/Launcher/Ariane5/Knes_Engine_EPS.cfg
+++ b/GameData/Knes/Parts/Launcher/Ariane5/Knes_Engine_EPS.cfg
@@ -46,7 +46,7 @@ PART
 	breakingTorque = 200	
 	maxTemp = 2000 // = 3600
 	bulkheadProfiles = size1
-	tags = knes orbit propuls rocket vacuum
+	tags = knes orbit propuls rocket vacuum Ariane
 	
 	MODULE
 	{
