--- a/GameData/Knes/Parts/Launcher/Ariane5/Knes_Structural_Kylda.cfg
+++ b/GameData/Knes/Parts/Launcher/Ariane5/Knes_Structural_Kylda.cfg
@@ -34,5 +34,5 @@ PART
 	breakingTorque = 50
 	fuelCrossFeed = True
 	bulkheadProfiles = size0, size1
-	tags = knes )cap cone nose
+	tags = knes )cap cone nose Ariane
 }
