--- a/GameData/Knes/Parts/Launcher/Veronique/_Knes_Veronique_Aileron.cfg
+++ b/GameData/Knes/Parts/Launcher/Veronique/_Knes_Veronique_Aileron.cfg
@@ -26,10 +26,10 @@ PART
 	cost = 20
 	category = Aero
 	subcategory = 0
-	title = Veronique Fin
+	title = AGI-F "Fish" Fin
 	manufacturer = Knes
-	description = Small Fin for the Veronique Rocket
-	tags = Vesta Knes
+	description = Small Fin for the Varinka Rocket
+	tags = Veronique Knes Varinka fin
 	
 	mass = 0.005
 	
