--- a/GameData/Knes/Parts/Launcher/Veronique/_Knes_Veronique_Decoupler_03125.cfg
+++ b/GameData/Knes/Parts/Launcher/Veronique/_Knes_Veronique_Decoupler_03125.cfg
@@ -33,11 +33,11 @@ PART
 
 	category = Coupling
 	subcategory = 0
-	title = Decoupler Veronique
+	title = AGI-D "Loop" Decoupler
 	manufacturer = Knes
-	description = A 0.3125 Decoupler for Veronique Rocket
+	description = A 0.3125 Decoupler for the Varinka Rocket
 		
-	tags = Knes Decoupler Veronique Vesta
+	tags = Knes Decoupler Veronique Vesta Varinka 0.3125
 
 	mass = 0.05
 
