--- a/GameData/Knes/Parts/Launcher/Veronique/_Knes_Veronique_Engine_03125.cfg
+++ b/GameData/Knes/Parts/Launcher/Veronique/_Knes_Veronique_Engine_03125.cfg
@@ -29,10 +29,10 @@ PART
 
     category     = Propulsion
     subcategory  = 0
-	title = Veronique Engine
+	title = AGI-E "Vekin" Engine
 	manufacturer = Knes
-	description = This little engine is for the Veronique Rocket. 0.3125 size
-	tags = Veronique Knes
+	description = This little engine is for the Varinka Rocket.
+	tags = Veronique Knes Varinka 0.3125 engine
 
     mass = 0.05
 
