--- a/GameData/Knes/Parts/Launcher/Veronique/_Knes_Veronique_FuelTank_03125.cfg
+++ b/GameData/Knes/Parts/Launcher/Veronique/_Knes_Veronique_FuelTank_03125.cfg
@@ -29,10 +29,10 @@ PART
 
 	category = FuelTank
 	subcategory = 0
-	title = Veronique Fuel Tank
+	title = AGI-FT "Hope" FuelTank
 	manufacturer = Knes
-	description = A FuelTank for the Veronique Rocket. size 0.3125
-	tags = Vesta Knes
+	description = A 0.3125 FuelTank for the Varinka Rocket.
+	tags = Vesta Knes Fuel Veronique Varinka 0.3125
 
 	mass = 0.0219
 
