--- a/GameData/Knes/Parts/Core/Decouplers/Knes_Decoupler_G3750.cfg
+++ b/GameData/Knes/Parts/Core/Decouplers/Knes_Decoupler_G3750.cfg
@@ -40,7 +40,7 @@ PART
 	heatConductivity           = 0.06
 	skinInternalConductionMult = 4.0
 	emissiveConstant           = 0.8
-	tags = knes break decouple separat split stag
+	tags = knes break decouple separat split stag Ariane
 	
 	MODULE
 	{
