--- a/GameData/Knes/Parts/Launcher/Vesta/_Knes_Vesta_Adapter_0625to03125.cfg
+++ b/GameData/Knes/Parts/Launcher/Vesta/_Knes_Vesta_Adapter_0625to03125.cfg
@@ -30,10 +30,10 @@ PART
 	
 	category = Coupling
 	subcategory = 0
-	title = Vesta Adapter 0.625 to 0.3125
+	title = LRBA-V "FoxHole" Adapter 0.625 to 0.3125
 	manufacturer = Knes
-	description = A beautiful Adapter 0.625 to 0.3125 for the Vesta Rocket.
-	tags = Vesta Knes
+	description = A beautiful Adapter 0.625 to 0.3125 for the Viska Rocket.
+	tags = Vesta Viska Knes
 
     mass = 0.02
 
