--- a/GameData/Knes/Parts/Launcher/Vesta/_Knes_Vesta_Aileron.cfg
+++ b/GameData/Knes/Parts/Launcher/Vesta/_Knes_Vesta_Aileron.cfg
@@ -26,10 +26,10 @@ PART
 	cost = 600
 	category = Aero
 	subcategory = 0
-	title = Vesta Fin
+	title = LRBA-F "Weak" Fin
 	manufacturer = Knes
-	description = Small Fin for the Vesta Rocket
-	tags = Vesta Knes
+	description = Small Fin for the Viska Rocket
+	tags = Vesta Viska Knes
 	
 	mass = 0.045
 	
