--- a/GameData/Knes/Parts/Launcher/Vesta/_Knes_Vesta_Avionic_03125.cfg
+++ b/GameData/Knes/Parts/Launcher/Vesta/_Knes_Vesta_Avionic_03125.cfg
@@ -28,10 +28,10 @@ PART
 	cost = 450
 	category     = Pods
 	subcategory  = 0
-	title        = Probe Nose Cone
+	title        = LRBA-P "Valiant" Probe Nose Cone
 	manufacturer = Knes
 	description  = A small probe for a small rocket.
-	tags = Vesta Veronique Knes
+	tags = Vesta Viska Veronique Varinka Knes
 
 	mass = 0.06
 
