--- a/GameData/Knes/Parts/Launcher/Vesta/_Knes_Vesta_CatPod_03125.cfg
+++ b/GameData/Knes/Parts/Launcher/Vesta/_Knes_Vesta_CatPod_03125.cfg
@@ -30,10 +30,10 @@ PART
 	cost = 400
 	category = Science
 	subcategory = 0
-	title = CosmoCat
+	title = LRBA-P "CosmoCat" Science Pod
 	manufacturer = Knes
 	description = It's called a feline transportation unit.
-	tags = Vesta Veronique Knes
+	tags = Vesta Viska Veronique Varinka Knes
 	
 	mass = 0.05
 	
