--- a/GameData/Knes/Parts/Launcher/Vesta/_Knes_Vesta_Engine_0625.cfg
+++ b/GameData/Knes/Parts/Launcher/Vesta/_Knes_Vesta_Engine_0625.cfg
@@ -28,10 +28,10 @@ PART
 
     category     = Propulsion
     subcategory  = 0
-	title = Vesta Engine
+	title = LRBA-V "Gauntness" Engine
 	manufacturer = Knes
-	description = This little engine is for the Vesta Rocket. 0.625 size
-	tags = Vesta Knes
+	description = This little engine is for the Viska Rocket. 0.625 size
+	tags = Vesta Viska Knes
 
     mass = 0.25
 
