--- a/GameData/Knes/Parts/Launcher/Vesta/_Knes_Vesta_FuelTank_0625_3125.cfg
+++ b/GameData/Knes/Parts/Launcher/Vesta/_Knes_Vesta_FuelTank_0625_3125.cfg
@@ -29,10 +29,10 @@ PART
 
 	category = FuelTank
 	subcategory = 0
-	title = Vesta Fuel Tank
+	title = LRBA-FT "Hunger" Fuel Tank
 	manufacturer = Knes
-	description = A FuelTank for the Vesta Rocket. size 0.625
-	tags = Vesta Knes
+	description = A FuelTank for the Viska Rocket. size 0.625
+	tags = Vesta Viska Knes
 
 	mass = 0.1188
 
