--- a/GameData/Knes/Parts/Launcher/Vesta/_Knes_Vesta_Parachute_03125.cfg
+++ b/GameData/Knes/Parts/Launcher/Vesta/_Knes_Vesta_Parachute_03125.cfg
@@ -33,10 +33,10 @@ PART
 	cost = 400
 	category = Utility
 	subcategory = 0
-	title = Vesta Parachute
+	title = LRBA-C "Feeble" Parachute
 	manufacturer = Knes
 	description = This Parachute has been widely accepted as a generally better alternative to being in freefall.
-	tags = Vesta Veronique Knes
+	tags = Vesta Viska Veronique Varinka Knes
 	
 	mass = 0.025
 	
