--- a/GameData/Knes/Parts/Launcher/Vesta/_Knes_Vesta_AirBrake.cfg
+++ b/GameData/Knes/Parts/Launcher/Vesta/_Knes_Vesta_AirBrake.cfg
@@ -23,7 +23,7 @@ PART
 	cost = 1000
 	category = Aero
 	subcategory = 0
-	title = Small Airbrake
+	title = LRBA-A "Resolute" Airbrake
 	manufacturer = Knes
 	description = Research into feasible ways to slow down a plane in mid-air showed that loose hull panels are pretty great as drag-inducing deceleration devices.
 	attachRules = 0,1,0,0,1
@@ -39,7 +39,7 @@ PART
 	explosionPotential = 0.1
 	fuelCrossFeed = True
 	bulkheadProfiles = srf
-	tags = (air airbrake aircraft brake dive drag fligh landing plane slow speed spoil Knes Vesta Veronique
+	tags = (air airbrake aircraft brake dive drag fligh landing plane slow speed spoil Knes Vesta Viska Veronique Varinka
 	
 	MODULE
 	{
