--- a/GameData/Knes/Parts/Launcher/Veronique/_Knes_Veronique_FuelTank_03125.cfg
+++ b/GameData/Knes/Parts/Launcher/Veronique/_Knes_Veronique_FuelTank_03125.cfg
@@ -32,7 +32,7 @@ PART
 	title = AGI-FT "Hope" FuelTank
 	manufacturer = Knes
 	description = A 0.3125 FuelTank for the Varinka Rocket.
-	tags = Vesta Knes Fuel Veronique Varinka 0.3125
+	tags = Knes Fuel Veronique Varinka 0.3125
 
 	mass = 0.0219
 
