--- a/GameData/Knes/Parts/Launcher/Ariane5/Knes_Engine_Vulcain.cfg
+++ b/GameData/Knes/Parts/Launcher/Ariane5/Knes_Engine_Vulcain.cfg
@@ -12,6 +12,15 @@
 	scale = 1	
 	rescaleFactor = 1
 	
+	fx_exhaustFlame_blue = 0.0, -2, 0.0, 0.0, 1.0, 0.0, running
+	fx_exhaustLight_blue = 0.0, -2, 0.0, 0.0, 0.0, 1.0, running
+	fx_smokeTrail_light = 0.0, -2, 0.0, 0.0, 1.0, 0.0, running
+	fx_exhaustSparks_flameout = 0.0, -2, 0.0, 0.0, 1.0, 0.0, flameout
+	sound_vent_medium = engage
+	sound_rocket_hard = running
+	sound_vent_soft = disengage
+	sound_explosion_low = flameout
+	
 	node_stack_top = 0.0, 1.718, 0.0, 0.0, 1.0, 0.0, 3
 	node_stack_bottom = 0.0, -3.202, 0.0, 0.0, -1.0, 0.0, 3
 	
@@ -39,88 +48,18 @@
 	bulkheadProfiles = size3
 	tags = ascent main propuls knes rocket sustain vacuum vulcain
 	
-	EFFECTS
-	{
-		running_closed
-		{
-			AUDIO
-			{
-				channel = Ship
-				clip = sound_rocket_hard
-				volume = 0.0 0.0
-				volume = 1.0 1.0
-				pitch = 0.0 0.2
-				pitch = 1.0 1.0
-				loop = true
-			}
-			PREFAB_PARTICLE
-			{
-				prefabName = fx_smokeTrail_veryLarge
-				transformName = smokePoint
-				emission = 0.0 0.0
-				emission = 0.05 0.0
-				emission = 0.075 0.25
-				emission = 1.0 1.25
-				speed = 0.0 0.25
-				speed = 1.0 1.0
-				localOffset = 0, 0, 1
-			}
-			MODEL_MULTI_PARTICLE
-			{
-				modelName = Squad/FX/ksX_Exhaust
-				transformName = fxPoint
-				emission = 0.0 0.0
-				emission = 0.05 0.0
-				emission = 0.075 0.25
-				emission = 1.0 1.25
-				speed = 0.0 0.5
-				speed = 1.0 1.2
-			}
-		}
-		engage
-		{
-			AUDIO
-			{
-				channel = Ship
-				clip = sound_vent_soft
-				volume = 1.0
-				pitch = 2.0
-				loop = false
-			}
-		}
-		flameout
-		{
-			PREFAB_PARTICLE
-			{
-				prefabName = fx_exhaustSparks_flameout_2
-				transformName = fxPoint
-				oneShot = true
-			}
-			AUDIO
-			{
-				channel = Ship
-				clip = sound_explosion_low
-				volume = 1.0
-				pitch = 2.0
-				loop = false
-			}
-		}
-	}
 	MODULE
 	{
-		name = ModuleEnginesFX
+		name = ModuleEngines
 		thrustVectorTransformName = thrustTransform
-		powerEffectName = shockDiamond		
-		engineID = KSX
-		runningEffectName = running_closed
 		exhaustDamage = True
 		ignitionThreshold = 0.1
 		minThrust = 0
 		maxThrust = 1390
 		heatProduction = 180
-		fxOffset = 0, 0, 1
+		fxOffset = 0, 0, 0.1
 		EngineType = LiquidFuel
-		exhaustDamageDistanceOffset = 1.5
+		exhaustDamageDistanceOffset = 0.5
 		PROPELLANT
 		{
 			name = LiquidFuel
@@ -159,7 +98,7 @@
 		RESOURCE
 		{
 			name = ElectricCharge
-			rate = 12.0
+			rate = 10.0
 		}
 	}
 
