--- a/GameData/Knes/Parts/Core/Adapters/Knes_Structural_Guepiere.cfg
+++ b/GameData/Knes/Parts/Core/Adapters/Knes_Structural_Guepiere.cfg
@@ -6,17 +6,17 @@
 	
 	MODEL
 	{
-		model = Knes/Parts/Launcher/Ariane5/Knes_Structural_Guepiere
+		model = Knes/Parts/Core/Adapters/Knes_Structural_Guepiere
 	}
 	
 	scale = 1	
 	rescaleFactor = 1.5
 
 	
-	node_stack_top = 0.0, 0.757, 0.0, 0.0, 1.0, 0.0
-	node_stack_bottom01 = 0, -0.43, -0.7233048, 0.0, -1.0, 0.0
-	node_stack_bottom02 = -0.6264005, -0.43, 0.3616524, 0.0, -1.0, 0.0
-	node_stack_bottom03 = 0.6264006, -0.43, 0.3616522, 0.0, -1.0, 0.0
+	node_stack_top = 0.0, 0.75703, 0.0, 0.0, 1.0, 0.0
+	node_stack_bottom01 = 0, -0.43002, -0.72236, 0.0, -1.0, 0.0
+	node_stack_bottom02 = -0.62558, -0.43002, 0.36118, 0.0, -1.0, 0.0
+	node_stack_bottom03 = 0.62558, -0.43002, 0.36118, 0.0, -1.0, 0.0
 	
 	TechRequired = advConstruction
 	entryCost = 2100
