--- a/GameData/Knes/Parts/Core/Fairings/Knes_Aero_Fairing_1875.cfg
+++ b/GameData/Knes/Parts/Core/Fairings/Knes_Aero_Fairing_1875.cfg
@@ -53,6 +53,7 @@ PART
 		nSides = 40
 		nArcs = 2
 		TextureURL = Knes/Parts/Core/Fairings/fairings_diff
+		CapTextureURL = Knes/Parts/Core/Fairings/fairingsCap	
 		
 		panelGrouping = 3
 		pivot = 0,0.065,0
