--- a/GameData/Knes/Parts/Core/Fairings/Knes_Aero_Fairing_250.cfg
+++ b/GameData/Knes/Parts/Core/Fairings/Knes_Aero_Fairing_250.cfg
@@ -54,6 +54,7 @@
 		nArcs = 2
 		nCollidersPerXSection = 9
 		TextureURL = Knes/Parts/Core/Fairings/fairings_diff
+		CapTextureURL = Knes/Parts/Core/Fairings/fairingsCap	
 		
 		panelGrouping = 3
 		pivot = 0,0.065,0
