--- a/GameData/Knes/Parts/Core/Fairings/Knes_Aero_Fairing_375.cfg
+++ b/GameData/Knes/Parts/Core/Fairings/Knes_Aero_Fairing_375.cfg
@@ -53,6 +53,7 @@
 		nArcs = 2
 		nCollidersPerXSection = 12
 		TextureURL = Knes/Parts/Core/Fairings/fairings_diff
+		CapTextureURL = Knes/Parts/Core/Fairings/fairingsCap		
 		
 		panelGrouping = 3
 		pivot = 0,0.065,0
