--- a/GameData/Knes/Parts/Launcher/Veronique/_Knes_Veronique_Aileron.cfg
+++ b/GameData/Knes/Parts/Launcher/Veronique/_Knes_Veronique_Aileron.cfg
@@ -21,7 +21,7 @@ PART
 	bulkheadProfiles = srf	
 	attachRules = 0,1,0,1,0
 	
-	TechRequired = aviation
+	TechRequired = start
 	entryCost = 800
 	cost = 20
 	category = Aero
