--- a/GameData/Knes/Parts/Launcher/Vesta/_Knes_Vesta_AirBrake.cfg
+++ b/GameData/Knes/Parts/Launcher/Vesta/_Knes_Vesta_AirBrake.cfg
@@ -18,7 +18,7 @@ PART
 	
 	node_attach = 0.0, 0.0, 0.0, 0.0, 0.0, -1.0, 1
 	
-	TechRequired = advAerodynamics
+	TechRequired = survivability
 	entryCost = 20000
 	cost = 1000
 	category = Aero
