--- a/GameData/Knes/Parts/Science/Box_Sensor_GasAnalyzer.cfg
+++ b/GameData/Knes/Parts/Science/Box_Sensor_GasAnalyzer.cfg
@@ -4,28 +4,28 @@
 
 PART
 {
-	name = _Knes_Box_Sensor_IRSpectrometer
+	name = Box_Sensor_GasAnalyzer
 	module = Part
 	author = Well
 	
 	MODEL
 	{
-		model = Knes/Parts/Science/Box_Sensor_IRSpectrometer
+		model = Knes/Parts/Science/Box_Sensor_GasAnalyzer
 	}
 	
 	scale = 1
 	rescaleFactor = 1
 	
-	node_attach = 0.0, 0.0, -0.096, 0.0, 0.0, 1.0
+	node_attach = 0.0, 0.096, 0.0, 0.0, 1.0, 0.0
 	
-	TechRequired = basicScience
+	TechRequired = survivability
 	entryCost = 2200
 	cost = 880
 	category = Science
 	subcategory = 0
-	title = IR Spectrometer
+	title = GasAnalyzer
 	manufacturer = Knes
-	description = Spectrometer to measure the thermal radiation of the atmosphere and surface, measuring the ranges from 7 to 20 μm and 14 to 38 μm, each at 150 positions.
+	description = This experiment device contained five manometer analysis cells, a moisture gauge and control electronics in a 10 cm diameter cylindrical package. Include two manometers and three miscellaneous experiments designed to detect trace amounts of gases
 	attachRules = 0,1,0,0,1
 	mass = 0.005
 	dragModelType = default
@@ -50,19 +50,20 @@ PART
 	MODULE
 	{
 		name = ModuleScienceExperiment
-		experimentID = IRSpectrometer
+		experimentID = GasAnalyzer
 		experimentActionName = Log Data
 		resetActionName = Delete Data
 		useStaging = False
 		useActionGroups = True
 		hideUIwhenUnavailable = False
 		xmitDataScalar = 0.5
-		FxModules = 0	
 		dataIsCollectable = True
 		collectActionName = Take Data
 		interactionRange = 1.5
 		rerunnable = True
+		FxModules = 0	
 		usageReqMaskInternal = 1
 		usageReqMaskExternal = 8
 	}
+
 }
