--- a/GameData/Knes/Parts/Launcher/Diamant/_Knes_DiamantB_Avionics_0625.cfg
+++ b/GameData/Knes/Parts/Launcher/Diamant/_Knes_DiamantB_Avionics_0625.cfg
@@ -33,7 +33,7 @@ PART
 	title        = DiamantB avionics
 	manufacturer = Knes
 	description  = A small probe for a small rocket.
-	tags = Knes
+	tags = Diamant Knes
 
 	mass = 0.06
 
@@ -61,9 +61,9 @@ PART
 	MODULE
 	{
 		name = ModuleReactionWheel
-		PitchTorque = 0.1
-		YawTorque = 0.1
-		RollTorque = 0.1
+		PitchTorque = 2
+		YawTorque = 2
+		RollTorque = 2
 		RESOURCE
 		{
 			name = ElectricCharge
@@ -126,4 +126,58 @@ PART
 		amount = 200.0
 		maxAmount = 200.0
 	}
+	RESOURCE
+	{
+		name = MonoPropellant
+		amount = 50
+		maxAmount = 50
+	}
+	
+	EFFECTS
+	{
+		running
+		{
+			AUDIO_MULTI_POOL
+			{
+				channel = Ship
+				transformName = thrustTransform
+				clip = sound_rocket_mini
+				volume = 0.0 0.0
+				volume = 0.1 0.0
+				volume = 0.5 0.025
+				volume = 1.0 0.1
+				pitch = 0.0 0.75
+				pitch = 1.0 1.5
+				loop = true
+			}
+			MODEL_MULTI_PARTICLE
+			{
+				modelName = Squad/FX/Monoprop_small
+				transformName = thrustTransform
+				emission = 0.0 0.0
+				emission = 0.1 0.0
+				emission = 1.0 1.0
+				speed = 0.0 0.8
+				speed = 1.0 1.0
+				localRotation = -90, 0, 0
+			}
+		}		
+	}
+	
+	MODULE
+	{
+		name = ModuleRCSFX
+		stagingEnabled = False
+		thrusterTransformName = thrustTransform
+		thrusterPower = 1
+		resourceName = MonoPropellant
+		resourceFlowMode = STAGE_PRIORITY_FLOW
+		runningEffectName = running
+		atmosphereCurve
+		{
+			key = 0 240
+			key = 1 100
+			key = 4 0.001
+		}
+	}	
 }
