--- a/GameData/Knes/Parts/Launcher/Diamant/_Knes_Diamant_Aileron.cfg
+++ b/GameData/Knes/Parts/Launcher/Diamant/_Knes_Diamant_Aileron.cfg
@@ -29,7 +29,7 @@ PART
 	title = Diamant Fin
 	manufacturer = Knes
 	description = Small Fin for the Diamant Rocket
-	tags = Vesta Knes
+	tags = Diamant Knes
 	
 	mass = 0.055
 	
